--- a/src/components/mainContent/mainContent.module.css
+++ b/src/components/mainContent/mainContent.module.css
@@ -2,6 +2,7 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	padding: 24px;
 }
 
 .actionsList {
@@ -11,15 +12,24 @@
 	background: #fff;
 }
 
+.listHeader, ul>li.listItem {
+	border: none;
+	padding: 0;
+	font-size: 16px;
+	line-height: 130%;
+	font-weight: 400;
+	color: #061178;
+}
+
 .actionsBody {
-    max-width: 752px;
+	max-width: 752px;
 	margin-top: 19px;
-    padding: 24px;
-    background: #fff;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 130%;
-    color: #262626;
+	padding: 24px;
+	background: #fff;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 130%;
+	color: #262626;
 }
 
 .footer {
