--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 header.header {
 	background: var(--primary-light-1);
 	padding: 16px 24px;
-	height: 168px;
+	height: auto;
 	line-height: 1.3;
 }
 
@@ -18,7 +18,7 @@ header.header {
 	justify-content: space-between;
 }
 
-.title {
+.contentBlock .title {
 	margin: 15px 0 10px;
 	max-width: 900px;
 	font-family: var(--font-family);
@@ -30,4 +30,47 @@ header.header {
 
 .settingBtn {
 	margin-top: 7px;
+}
+
+@media(max-width: 1024px){
+	.contentBlock .title {
+		font-size: 28px;
+	}
+}
+
+@media(max-width: 992px){
+	.contentBlock .title {
+		font-size: 24px;
+	}
+
+	.contentBlock .settingsImg {
+		display: none;
+	}
+}
+
+@media(max-width: 768px){
+	.contentBlock .title {
+		font-size: 20px;
+		font-weight: 500;
+	}
+
+	.contentBlock .settingsImg {
+		display: block;
+		padding: 7px;
+		box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
+		background: var(--character-light-primary-inverse);
+		border: 1px solid var(--character-light-border);
+		border-radius: 50%;
+
+	}
+	.contentBlock .settingsImg+span{
+		display: none;
+	}
+	.contentBlock .title {
+		margin: 0;
+	}
+	.settingBtn {
+		margin-top: 0;
+	}
+	
 }
