--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -2,11 +2,10 @@
 	height: 100vh;
 	max-height: 1024px;
 	position: relative;
-	z-index: 2;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
 }
 
 .logo {
@@ -31,7 +30,18 @@ ul.sidebarMenu {
 	line-height: 130%;
 	color: var(--character-light-title-85);
 }
-
+.collapsMobileBtnWrapper {
+	width: 35px;
+	height: 50px;
+	top: 23px;
+	right: -33px;
+	position: absolute;
+	background-color: #fff;
+	clip-path: polygon(100% 10%, 100% 90%, 0 100%, 0 0);
+	display: none;
+	align-items: center;
+	justify-content: center;
+}
 .collapsBtnWrapper {
 	width: 20px;
 	height: 66px;
@@ -44,4 +54,59 @@ ul.sidebarMenu {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+ul.sidebarMenu .sidebarMenuExit {
+	height: 40px;
+	gap: 0;
+}
+
+.sidebarMenuExitLabel {
+	padding-left: 12px;
+	font-family: var(--font-family);
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 130%;
+	text-align: center;
+	color: var(--character-light-title-85);
+}
+
+
+
+@media(max-width: 768px){
+	.sidebar .sidebarMenu span[role="img"] {
+		display: none;
+	}
+
+	.logo {
+		background: center no-repeat url('@assets/icons/Logo_mobile.svg');
+		margin: 7px 0 15px;
+	}
+	ul.sidebarMenu{
+		gap: 0;
+	}
+	.collapsMobileBtnWrapper{
+		display: flex;
+	}
+	.collapsBtnWrapper {
+		display: none;
+	}
+	aside.sidebar, .sidebar>div{
+		position: fixed;
+		z-index: 2;
+		background-color: #fff;
+	}
+	.sidebar>div {
+		width: inherit;
+	}
+
+	.sidebar .sidebarMenu li>span {
+		margin-left: 8px;
+	}
+	.sidebar .sidebarMenu li {
+		padding: 0;
+	}
+	.sidebar .sidebarMenu span>span {
+		margin: 0;
+	}
 }
