--- a/src/components/mainContent/mainContent.module.css
+++ b/src/components/mainContent/mainContent.module.css
@@ -11,10 +11,6 @@
 	border-radius: 2px;
 	background: var(--character-light-primary-inverse);
 	box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 130%;
 	color: var(--primary-light-9);
 }
 .wrapper .actionsList div, .wrapper .actionsList li {
@@ -22,10 +18,7 @@
 	padding: 0;
 }
 .actionsList .listHeader, .actionsList ul>li.listItem {
-	font-size: 16px;
-	line-height: 130%;
-	font-weight: 400;
-	color: #061178;
+	color: var(--primary-light-9);
 }
 
 .actionsBody {
@@ -35,10 +28,8 @@
 	border-radius: 2px;
 	background: var(--character-light-primary-inverse);
 	box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
-	font-family: var(--font-family);
 	font-weight: 500;
 	font-size: 20px;
-	line-height: 130%;
 	color: var(--character-light-title-85);
 }
 
@@ -62,20 +53,13 @@
 
 .actionCardTitle {
 	padding: 4px 8px;
-	font-family: var(--font-family);
 	text-wrap: wrap;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 130%;
 	color: var(--character-light-title-85);
 }
 
 button.actionCardBtn {
 	padding: 0 0 0 7px;
-	font-family: var(--font-family);
-	font-weight: 400;
 	font-size: 14px;
-	line-height: 130%;
 	text-align: center;
 	color: var(--primary-light-6);
 }
@@ -99,10 +83,6 @@ button.actionCardBtn {
 
 .reviewsLink {
 	padding: 6px 15px;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 130%;
 	text-align: center;
 	color: var(--primary-light-6);
 }
@@ -116,17 +96,12 @@ button.actionCardBtn {
 
 .downloadCard .downloadCardTitleLink {
 	margin-left: 12px;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
 	line-height: 160%;
 	color: var(--primary-light-6);
 }
 
 .downloadCard .downloadCardSubtitle {
 	margin-left: 12px;
-	font-family: var(--font-family);
-	font-weight: 400;
 	font-size: 14px;
 	line-height: 200%;
 	color: var(--character-light-secondary-45);
@@ -138,10 +113,7 @@ button.actionCardBtn {
 }
 
 .downloadCardBtn span {
-	font-family: var(--font-family);
-	font-weight: 400;
 	font-size: 14px;
-	line-height: 130%;
 	text-align: center;
 	color: var(--character-light-title-85);
 }
