--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -24,10 +24,7 @@ ul.sidebarMenu {
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
-	font-family: var(--font-family);
-	font-weight: 400;
 	font-size: 14px;
-	line-height: 130%;
 	color: var(--character-light-title-85);
 }
 .collapsMobileBtnWrapper {
@@ -36,7 +33,7 @@ ul.sidebarMenu {
 	top: 23px;
 	right: -33px;
 	position: absolute;
-	background-color: #fff;
+	background-color: var(--neutral-gray-1);
 	clip-path: polygon(100% 10%, 100% 90%, 0 100%, 0 0);
 	display: none;
 	align-items: center;
@@ -49,7 +46,7 @@ ul.sidebarMenu {
 	top: 50%;
 	transform: translate(0, -50%);
 	right: -19px;
-	background-color: #fff;
+	background-color: var(--neutral-gray-1);
 	clip-path: polygon(100% 10%, 100% 90%, 0 100%, 0 0);
 	display: flex;
 	align-items: center;
@@ -63,10 +60,7 @@ ul.sidebarMenu .sidebarMenuExit {
 
 .sidebarMenuExitLabel {
 	padding-left: 12px;
-	font-family: var(--font-family);
-	font-weight: 400;
 	font-size: 14px;
-	line-height: 130%;
 	text-align: center;
 	color: var(--character-light-title-85);
 }
@@ -94,7 +88,7 @@ ul.sidebarMenu .sidebarMenuExit {
 	aside.sidebar, .sidebar>div{
 		position: fixed;
 		z-index: 2;
-		background-color: #fff;
+		background-color: var(--neutral-gray-1);
 	}
 	.sidebar>div {
 		width: inherit;
