--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    font-family: var(--font-family);
+    font-size: 16px;
+    line-height: 1.3;
     font-weight: 400;
 
     color-scheme: light dark;
