--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar>div {
-	height: 100vh;
-	max-height: 1024px;
+	height: 100%;
+	min-height: 100vh;
 	position: relative;
 	display: flex;
 	flex-direction: column;
