--- a/src/components/mainContent/mainContent.module.css
+++ b/src/components/mainContent/mainContent.module.css
@@ -7,7 +7,10 @@
 
 .wrapper .actionsList {
 	max-width: 752px;
-	padding: 24px;
+	line-height: 1.3;
+	font-size: 16px;
+	font-weight: 400;
+	padding: 24px 27px 23px;
 	border-radius: 2px;
 	background: var(--character-light-primary-inverse);
 	box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
@@ -24,12 +27,13 @@
 .actionsBody {
 	max-width: 752px;
 	margin-top: 24px;
-	padding: 24px;
+	padding: 25px 26px;
 	border-radius: 2px;
 	background: var(--character-light-primary-inverse);
 	box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
 	font-weight: 500;
 	font-size: 20px;
+	line-height: 1.3;
 	color: var(--character-light-title-85);
 }
 
@@ -52,8 +56,9 @@
 }
 
 .actionCardTitle {
-	padding: 4px 8px;
+	padding: 3px 8px;
 	text-wrap: wrap;
+	font-size: 16px;
 	color: var(--character-light-title-85);
 }
 
@@ -82,7 +87,8 @@ button.actionCardBtn {
 }
 
 .reviewsLink {
-	padding: 6px 15px;
+	padding: 6px 17px;
+	font-size: 16px;
 	text-align: center;
 	color: var(--primary-light-6);
 }
@@ -97,6 +103,7 @@ button.actionCardBtn {
 .downloadCard .downloadCardTitleLink {
 	margin-left: 12px;
 	line-height: 160%;
+	font-size: 16px;
 	color: var(--primary-light-6);
 }
 
@@ -109,7 +116,9 @@ button.actionCardBtn {
 
 .downloadCard .downloadCardBtn {
 	padding: 0;
-	width: 50%;
+}
+.downloadCard .downloadCardBtn + .downloadCardBtn {
+	padding-left: 24px;
 }
 
 .downloadCardBtn span {
@@ -117,15 +126,49 @@ button.actionCardBtn {
 	text-align: center;
 	color: var(--character-light-title-85);
 }
-
+@media(max-width: 992px){
+	.actionCardTitle {
+		text-align: start;
+		padding: 1px 0 0 12px;
+	}
+}
 @media(max-width: 768px) {
+.wrapper {
+	padding: 24px 16px;
+}
+.wrapper .actionsList {
+	padding: 17px 38px 20px 17px;
+}
 	.actionCards {
 		flex-wrap: wrap;
 		align-items: center;
 		justify-content: center;
 	}
+	.actionsBody{
+		padding: 16px;
+	}
 	.footer {
 		flex-direction: column-reverse;
 		align-items: center;
 	}
+}
+
+@media(max-width: 768px) {
+	.actionCards {
+		gap: 10px;
+	}
+	.actionCards > div {
+		max-width: none;
+	}
+	.actionCardTitle {
+		text-align: center;
+	}
+	.footer .downloadCard {
+		width: 100%;
+		text-align: center;
+		margin-bottom: 26px;
+	}
+	.downloadCard .downloadCardBtn {
+	padding: 0 29px;
+}
 }
