--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
-:root {
+body, * {
     font-family: var(--font-family);
-    font-size: 16px;
-    line-height: 1.3;
-    font-weight: 400;
-
+}
+:root {
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
