--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -56,14 +56,14 @@ header.header {
 		font-weight: 500;
 	}
 
-	.contentBlock .settingsImg {
+	.contentBlock span.settingsImg {
 		display: block;
-
 		padding: 7px;
 		box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
 		background: var(--character-light-primary-inverse);
 		border: 1px solid var(--character-light-border);
 		border-radius: 50%;
+		line-height: 0;
 	}
 
 	.contentBlock .settingsImg + span {
